# curso_datos_oceanograficos

./: Makefile  README.md  docker-compose.yml  pyproject.toml
datos/chla_mat/: longitud.mat
ocean_data/: __init__.py  download_tools.py  open_netcdf.py  plot_temperature_lat_lon.py
src/: animation.py  beautiful_soup.py  chlorophyll_data.py  download_by_day.py  gebco_data.py  netcdf_multiple_variables.py  plot_histogram_temperatures.py  read_mat_files.py  read_netcdf_files.py  regionalizacion.py  soil_moisture_data.py
tests/: test_download_tools.py  test_open_netcdf.py  test_open_netcdf_files.py
tests/data/: ESACCI-SOILMOISTURE-L3S-SSMV-COMBINED-20220101000000-fv08.1.nc  latitud.mat
